# Ai-Assistant

./: .env  .gitignore  README.md  ai_agent.py  main.py  memory_manager.py  pyproject.toml  requirements.txt  shared_frame.py  speech_to_text.py  text_to_speech.py  tools.py
dora_memory/: chroma.sqlite3
