[project]
name = "cuba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "langgraph-prebuilt>=0.6.4",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "speechrecognition>=3.14.3",
]
